게임 상점 불러오기
스팀상점에서 현재 인기+할인중인 게임 받아와서 출력

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,11 @@ body {
 	@apply bg-white text-gray-900 dark:bg-gray-900 dark:text-white;
 	@apply font-sans leading-relaxed;
 }
+/* index.css */
+.no-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+.no-scrollbar {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
